--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,13 +1,26 @@
 <% if @restaurants.any? %>
-  <ul>
     <% @restaurants.each do |restaurant| %>
-      <li>
-        <%= restaurant.name %>
-        <%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %>
-        <%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete, data: { confirm: 'Are you sure?' } %>
-      </li>
+    <div class='restaurant'>
+      <h2><%= restaurant.name %></h2>
+      <%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %>
+      <%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete, data: { confirm: 'Are you sure?' } %>
+      <%= link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant) %>
+
+      <h4><%= pluralize restaurant.reviews.count, 'review' %></h4>
+      <h5>Average rating: 
+        <%= number_with_precision(restaurant.average_rating, precision: 1) %>
+        <%= star_rating(restaurant.average_rating) %>
+      </h5>
+      <ul>
+        <% restaurant.reviews.each do |review| %>
+          <li>
+            <strong><%= star_rating review.rating %></strong> - <%= review.thoughts %>
+          </li>
+        <% end %>
+      </ul>
     <% end %>
-  </ul>
 <% else %>
   No restaurants yet
 <% end %>
+
+<%= link_to "Create a restaurant", new_restaurant_path %>
