--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,10 +1,14 @@
+<template id="review_template">
+<li>
+  <strong>{{ rating }}</strong> - {{ thoughts }}
+</li>
+</template>
 <% if @restaurants.any? %>
     <% @restaurants.each do |restaurant| %>
     <div class='restaurant'>
       <h2><%= restaurant.name %></h2>
       <%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %>
       <%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete, data: { confirm: 'Are you sure?' } %>
-      <%= link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant) %>
 
       <h4><%= pluralize restaurant.reviews.count, 'review' %></h4>
       <h5>Average rating: 
@@ -18,9 +22,20 @@
           </li>
         <% end %>
       </ul>
+      <%= form_for [restaurant, @review] do |f| %>
+        <%= f.label :thoughts %>
+        <%= f.text_area :thoughts %>
+
+        <%= f.label :rating %>
+        <%= f.select :rating, 1..5 %>
+
+          <%= f.submit 'Leave Review' %>
+      <% end %>
     <% end %>
 <% else %>
   No restaurants yet
 <% end %>
 
 <%= link_to "Create a restaurant", new_restaurant_path %>
+<button id='testing'>Test</button>
+
