--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,8 +1,9 @@
 <template id="review_template">
 <li>
-  <strong>{{ rating }}</strong> - {{ thoughts }}
+  <strong>{{ star_rating }}</strong> - {{ thoughts }}
 </li>
 </template>
+
 <% if @restaurants.any? %>
     <% @restaurants.each do |restaurant| %>
     <div class='restaurant'>
@@ -10,10 +11,15 @@
       <%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %>
       <%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete, data: { confirm: 'Are you sure?' } %>
 
-      <h4><%= pluralize restaurant.reviews.count, 'review' %></h4>
+      <h4 class='review_count'><%= pluralize restaurant.reviews.count, 'review' %></h4>
       <h5>Average rating: 
-        <%= number_with_precision(restaurant.average_rating, precision: 1) %>
-        <%= star_rating(restaurant.average_rating) %>
+        <span class='average_rating_number'>
+          <%= number_with_precision(restaurant.average_rating, precision: 1) %>
+        </span>
+
+        <span class='average_rating_stars'>
+          <%= star_rating(restaurant.average_rating) %>
+        </span>
       </h5>
       <ul>
         <% restaurant.reviews.each do |review| %>
@@ -31,11 +37,10 @@
 
           <%= f.submit 'Leave Review' %>
       <% end %>
+    </div>
     <% end %>
 <% else %>
   No restaurants yet
 <% end %>
 
 <%= link_to "Create a restaurant", new_restaurant_path %>
-<button id='testing'>Test</button>
-
