--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -8,8 +8,11 @@
     <% @restaurants.each do |restaurant| %>
     <div class='restaurant'>
       <h2><%= restaurant.name %></h2>
-      <%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %>
-      <%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete, data: { confirm: 'Are you sure?' } %>
+
+      <% if user_signed_in? %>
+        <%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %>
+        <%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete, data: { confirm: 'Are you sure?' } %>
+      <% end %>
 
       <h4 class='review_count'><%= pluralize restaurant.reviews.count, 'review' %></h4>
       <h5>Average rating: 
@@ -28,14 +31,17 @@
           </li>
         <% end %>
       </ul>
-      <%= form_for [restaurant, @review] do |f| %>
-        <%= f.label :thoughts %>
-        <%= f.text_area :thoughts %>
 
-        <%= f.label :rating %>
-        <%= f.select :rating, 1..5 %>
+      <% if user_signed_in? %>
+        <%= form_for [restaurant, @review] do |f| %>
+          <%= f.label :thoughts %>
+          <%= f.text_area :thoughts %>
 
-          <%= f.submit 'Leave Review' %>
+          <%= f.label :rating %>
+          <%= f.select :rating, 1..5 %>
+
+            <%= f.submit 'Leave Review' %>
+        <% end %>
       <% end %>
     </div>
     <% end %>
